Upadated home url in menu and picture layout for chapter 1 in my story

--- a/Pages/aftacare-app-case-study.html
+++ b/Pages/aftacare-app-case-study.html
@@ -24,7 +24,7 @@
   <header>
     <a href="/index.html"><div class='swoosh position-fixed'></div></a>
     <div class='sticky-nav difference d-flex justify-content-between'>
-      <a href="./index.html"><div class='logo'></div></a>
+      <a href="/index.html"><div class='logo'></div></a>
       <div class='menu box' id='nav-btn'>
         <svg id="i1" class="icon" viewBox="20 30 60 40">
         <path id="top-line-1"     d="M30,37 L70,37 Z"></path>
@@ -69,7 +69,7 @@
           <div class='nav-col nav-menu col-12 col-md-5 bg-green d-flex align-items-center pt-5 pb-3 pb-md-5 px-3 px-md-5 order-0 order-md-1'>
             <ul class='nav-items list-unstyled'>
               <li class='pb-3'>
-                <a class='text-decoration-none' href='./index.html'>Home</a>
+                <a class='text-decoration-none' href='/index.html'>Home</a>
               </li>
               <li class='pb-3'>
                 <a class='text-decoration-none' href='#Projects'>Projects</a>
