--- a/Pages/aftacare-app.html
+++ b/Pages/aftacare-app.html
@@ -69,7 +69,7 @@
           <div class='nav-col nav-menu col-12 col-md-5 bg-green d-flex align-items-center pt-5 pb-3 pb-md-5 px-3 px-md-5 order-0 order-md-1'>
             <ul class='nav-items list-unstyled'>
               <li class='pb-3'>
-                <a class='text-decoration-none' href='./index.html'>Home</a>
+                <a class='text-decoration-none' href='/index.html'>Home</a>
               </li>
               <li class='pb-3'>
                 <a class='text-decoration-none' href='#Projects'>Projects</a>
