--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
   <section class="personalprojectscontainer" id='MyStory'>
     <div class=""><h1 class="section-title">My Story Starts Here<span class="accessibilitydeco">...</div>
     <div class="storycontainer">
-      <div class="chaptercontainer">
-        <div class="project-description-container"><h2>My First Job...</h2><span class="accessibilitydecoline"></span><p>"Part-time sales consultant" - That was my first position in 2014. By 2018, I had worked my way up the ladder to managing a flagship store. I learnt so much about sales, customer experience, management and people that I believed I was ready for something more challenging. Based on my belief, I decided to go study Markerting and stepped down to a part-time sales consultant again. Crazy right? hahahha... It only gets crazier!</p></div>
+      <div id="chapter1" class="chaptercontainer">
+        <div id="c1desc" class="project-description-container"><h2>My First Job...</h2><span class="accessibilitydecoline"></span><p>"Part-time sales consultant" - That was my first position in 2014. By 2018, I had worked my way up the ladder to managing a flagship store. I learnt so much about sales, customer experience, management and people that I believed I was ready for something more challenging. Based on my belief, I decided to go study Markerting and stepped down to a part-time sales consultant again. Crazy right? hahahha... It only gets crazier!</p></div>
         <div class="project-image-container">
           <img class="farewellimage" src="https://res.cloudinary.com/dmezet2fs/image/upload/v1708868899/SGH_Farewell_Image_hk3hcb.jpg" height="504" width="896" frameborder="0" allowfullscreen="" title="Embedded post"></div>
         </div>
